Mon Aug 04 17:19:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Convert to use range search
	  instead of facet ranges, to work with xapian SVN trunk.

Mon Aug 04 07:29:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/searchconnection_doctest1.txt,
	  xappy/doctests/searchconnection_doctest2.txt: Fixes needed for
	  the new xapian packages: percentage rounding has changed again,
	  and the error message when a database can't be found has been
	  changed (for the better).

Mon Aug 04 07:26:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with details of new xapian packages.

Mon Aug 04 06:34:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with latest branchpoints.

Sun Aug 03 20:39:26 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Add another test case - this
	  checks that some searches which should return the same values do
	  so.  More usefully, parts can be commented out to display the
	  speed of the various kinds of range searches.

Sun Aug 03 20:38:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_accel.py: Some formatting fixes.

Sun Aug 03 12:10:42 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update copyright date, and mention Paul Rudin.
	* docs/queries.rst: Make clear that approximate range terms can be
	  used to speed up exact range searches.

Sun Aug 03 11:57:37 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/range_accel.py: Add "range acceleration" terms,
	  to allow approximate ranges to be stored in documents.  This
	  allows fast, but approximate, range searches to be performed, and
	  also allows such a search to be combined with an exact range
	  search to speed up the range search.