@@ -32,5 +32,5 @@ from errors import *
 from fieldactions import FieldActions
 from indexerconnection import IndexerConnection
 from query import Query
-from searchconnection import SearchConnection
+from searchconnection import SearchConnection, ExternalWeightSource
 from replaylog import set_replay_path
