@@ -1,3 +1,15 @@
+Tue Aug 05 06:22:51 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/__init__.py,xappy/fieldactions.py,xappy/searchconnection.py,
+	  xappy/unittests/searchconn_process.py,
+	  xappy/unittests/weight_external.py: Add support for using an
+	  external source of weight information in searches.  This is a bit
+	  slow, so probably only useful for small databases, or for
+	  off-line testing.  Also, add support for using a SearchConnection
+	  to process a document (ie, translating an UnprocessedDocument to
+	  a ProcessedDocument) - this can be handy in various odd
+	  situations.
+
 Mon Aug 04 17:19:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/range_speed.py: Convert to use range search
